--- a/Preferences/Resources/Root.plist
+++ b/Preferences/Resources/Root.plist
@@ -121,6 +121,18 @@
 			<string>Enable Background Playback</string>
 		</dict>
 		<dict>
+			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>default</key>
+			<false/>
+			<key>defaults</key>
+			<string>com.johnzaro.perfectsafariprefs</string>
+			<key>key</key>
+			<string>showBookmarksBar</string>
+			<key>label</key>
+			<string>Show Bookmarks Bar</string>
+		</dict>
+		<dict>
         	<key>cell</key>
 			<string>PSGroupCell</string>
 			<key>label</key>
